# anomoly_detection_unsupervised

./: .gitignore  README.md  architecture.md  environment.yml  pyproject.toml  requirements.txt
assets/: pipeline.html
config/: config.yaml
notebooks/: anomaly_detection_pipeline.ipynb
scripts/: build_notebook.py  run_pipeline.py
src/anomaly_detection/: __init__.py
src/anomaly_detection/data/: loader.py
src/anomaly_detection/evaluation/: hitl.py  psi.py  synthetic.py
src/anomaly_detection/features/: engineer.py
src/anomaly_detection/models/: detector.py
src/anomaly_detection/visualization/: plots.py
tests/: conftest.py  test_detector.py  test_engineer.py  test_evaluation.py  test_loader.py
